--- a/action.yml
+++ b/action.yml
@@ -5,15 +5,13 @@ inputs:
   release_tag:
     required: true
     type: string
-  base_branch:
-    description: The branch being merged to.
-    type: string
-    default: main
 
 runs:
   using: composite
   steps:
-    - name: Delete Existing Tag
+    - name: Move the major version tag
       shell: bash
+      env:
+        RELEASE_TAG: ${{ inputs.release_tag }}
       run: |
-
+        bazelisk run //:move_major_version_tag -- --release_tag "${RELEASE_TAG}"
