--- a/tests/BUILD.bazel
+++ b/tests/BUILD.bazel
@@ -19,5 +19,6 @@ sh_test(
     deps = [
         "@bazel_tools//tools/bash/runfiles",
         "@cgrindel_bazel_starlib//shlib/lib:assertions",
+        "@cgrindel_bazel_starlib//shlib/lib:git",
     ],
 )
