--- a/.github/workflows/move_major_ver_tag_on_release.yml
+++ b/.github/workflows/move_major_ver_tag_on_release.yml
@@ -21,6 +21,9 @@ jobs:
           VALUE0: ${{ github.event.release.tag_name }}
           VALUE1: ${{ github.event.inputs.release_tag }}
         run: |
+          # DEBUG BEGIN
+          set -x
+          # DEBUG END
           values=( "${VALUE0}" "${VALUE1}" "${VALUE2}" )
           for value in "${values[@]}"; do
             [[ ! -z "${value}" ]] && \
