--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,9 @@ runs:
       env:
         RELEASE_TAG: ${{ inputs.release_tag }}
       run: |
+        # DEBUG BEGIN
+        set -x
+        # DEBUG END
         bazelisk run //:move_major_version_tag -- \
           --release_tag "${RELEASE_TAG}" \
           --repo_dir "${PWD}"
