--- a/.github/workflows/move_major_ver_tag_on_release.yml
+++ b/.github/workflows/move_major_ver_tag_on_release.yml
@@ -14,6 +14,17 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
+      - name: DEBUG
+        shell: bash
+        run: |
+          # DEBUG BEGIN
+          set -x
+          # DEBUG END
+          echo "PWD: ${PWD}"
+          git branch -vv 
+          git tag
+
+
       - name: Resolve release_tag
         id: resolve_release_tag
         shell: bash
