Added name to step.

--- a/.github/workflows/move_major_ver_tag_on_release.yml
+++ b/.github/workflows/move_major_ver_tag_on_release.yml
@@ -34,5 +34,6 @@ jobs:
           done
 
       - uses: ./
+        name: Move Major Version Release Tag
         with:
           release_tag: ${{ steps.resolve_release_tag.outputs.resolved_value }}
